--- a/css/icon-font-codes.css
+++ b/css/icon-font-codes.css
@@ -1,38 +1,43 @@
 
 .icn-abacus:before { content: '\e800'; } /* '' */
-.icn-alarm:before { content: '\e801'; } /* '' */
-.icn-albums:before { content: '\e802'; } /* '' */
-.icn-apartament:before { content: '\e803'; } /* '' */
-.icn-apps:before { content: '\e804'; } /* '' */
-.icn-arrow-circle-down:before { content: '\e805'; } /* '' */
-.icn-arrow-circle-left:before { content: '\e806'; } /* '' */
-.icn-arrow-circle-right:before { content: '\e807'; } /* '' */
-.icn-arrow-circle-up:before { content: '\e808'; } /* '' */
-.icn-arrow-o-down:before { content: '\e809'; } /* '' */
-.icn-arrow-o-left:before { content: '\e80a'; } /* '' */
-.icn-arrow-o-right:before { content: '\e80b'; } /* '' */
-.icn-arrow-o-up:before { content: '\e80c'; } /* '' */
-.icn-birthday:before { content: '\e80d'; } /* '' */
-.icn-block-page:before { content: '\e80e'; } /* '' */
-.icn-box-o:before { content: '\e80f'; } /* '' */
-.icn-box:before { content: '\e810'; } /* '' */
-.icn-btn-off:before { content: '\e812'; } /* '' */
-.icn-btn-on:before { content: '\e813'; } /* '' */
-.icn-bubble:before { content: '\e814'; } /* '' */
-.icn-calendar-clock:before { content: '\e815'; } /* '' */
-.icn-calendar-day:before { content: '\e816'; } /* '' */
-.icn-calendar-ok:before { content: '\e817'; } /* '' */
-.icn-calendar:before { content: '\e818'; } /* '' */
-.icn-cart-go:before { content: '\e819'; } /* '' */
-.icn-cart:before { content: '\e81a'; } /* '' */
-.icn-cash-registrer:before { content: '\e81b'; } /* '' */
-.icn-catalog:before { content: '\e81c'; } /* '' */
-.icn-category-o:before { content: '\e81d'; } /* '' */
-.icn-category-v:before { content: '\e81e'; } /* '' */
-.icn-category:before { content: '\e81f'; } /* '' */
-.icn-cc:before { content: '\e820'; } /* '' */
-.icn-checked:before { content: '\e821'; } /* '' */
-.icn-checkmark-circle:before { content: '\e822'; } /* '' */
+.icn-arrow-circle-right:before { content: '\e801'; } /* '' */
+.icn-arrow-circle-up:before { content: '\e802'; } /* '' */
+.icn-arrow-o-down:before { content: '\e803'; } /* '' */
+.icn-arrow-o-left:before { content: '\e804'; } /* '' */
+.icn-arrow-o-right:before { content: '\e805'; } /* '' */
+.icn-arrow-o-up:before { content: '\e806'; } /* '' */
+.icn-alarm:before { content: '\e807'; } /* '' */
+.icn-albums:before { content: '\e808'; } /* '' */
+.icn-apartament:before { content: '\e809'; } /* '' */
+.icn-apps:before { content: '\e80a'; } /* '' */
+.icn-chevron-donw:before { content: '\e80b'; } /* '' */
+.icn-chevron-left:before { content: '\e80c'; } /* '' */
+.icn-chevron-right:before { content: '\e80d'; } /* '' */
+.icn-chevron-up:before { content: '\e80e'; } /* '' */
+.icn-arrow-circle-down:before { content: '\e80f'; } /* '' */
+.icn-arrow-circle-left:before { content: '\e810'; } /* '' */
+.icn-birthday:before { content: '\e811'; } /* '' */
+.icn-block-page:before { content: '\e812'; } /* '' */
+.icn-box-o:before { content: '\e813'; } /* '' */
+.icn-box:before { content: '\e814'; } /* '' */
+.icn-btn-off:before { content: '\e815'; } /* '' */
+.icn-btn-on:before { content: '\e816'; } /* '' */
+.icn-bubble:before { content: '\e817'; } /* '' */
+.icn-calendar-clock:before { content: '\e818'; } /* '' */
+.icn-calendar-day:before { content: '\e819'; } /* '' */
+.icn-calendar-ok:before { content: '\e81a'; } /* '' */
+.icn-calendar:before { content: '\e81b'; } /* '' */
+.icn-cart-go:before { content: '\e81c'; } /* '' */
+.icn-cart:before { content: '\e81d'; } /* '' */
+.icn-cash-registrer:before { content: '\e81e'; } /* '' */
+.icn-catalog:before { content: '\e81f'; } /* '' */
+.icn-category-o:before { content: '\e820'; } /* '' */
+.icn-category-v:before { content: '\e821'; } /* '' */
+.icn-boxs:before { content: '\e822'; } /* '' */
+.icn-category:before { content: '\e823'; } /* '' */
+.icn-cc:before { content: '\e824'; } /* '' */
+.icn-checked:before { content: '\e825'; } /* '' */
+.icn-checkmark-circle:before { content: '\e826'; } /* '' */
 .icn-clients:before { content: '\e827'; } /* '' */
 .icn-clock:before { content: '\e828'; } /* '' */
 .icn-close:before { content: '\e829'; } /* '' */
@@ -46,6 +51,7 @@
 .icn-content:before { content: '\e831'; } /* '' */
 .icn-cover:before { content: '\e832'; } /* '' */
 .icn-credential-o:before { content: '\e833'; } /* '' */
+.icn-credential-old:before { content: '\e834'; } /* '' */
 .icn-crm:before { content: '\e835'; } /* '' */
 .icn-crop:before { content: '\e836'; } /* '' */
 .icn-danger:before { content: '\e837'; } /* '' */
@@ -53,96 +59,92 @@
 .icn-diagram-fluid:before { content: '\e839'; } /* '' */
 .icn-diagram-operation:before { content: '\e83a'; } /* '' */
 .icn-discharge:before { content: '\e83b'; } /* '' */
-.icn-division:before { content: '\e83c'; } /* '' */
-.icn-donwload:before { content: '\e83d'; } /* '' */
+.icn-lock:before { content: '\e83c'; } /* '' */
+.icn-division:before { content: '\e83d'; } /* '' */
+.icn-donwload:before { content: '\e83e'; } /* '' */
 .icn-excel:before { content: '\e83f'; } /* '' */
 .icn-expand:before { content: '\e840'; } /* '' */
-.icn-eye-close:before { content: '\e841'; } /* '' */
-.icn-eye-open:before { content: '\e842'; } /* '' */
-.icn-family:before { content: '\e843'; } /* '' */
-.icn-finance:before { content: '\e844'; } /* '' */
-.icn-folder-up:before { content: '\e845'; } /* '' */
-.icn-folder:before { content: '\e846'; } /* '' */
-.icn-group:before { content: '\e847'; } /* '' */
-.icn-home:before { content: '\e848'; } /* '' */
-.icn-industry:before { content: '\e849'; } /* '' */
-.icn-intranet:before { content: '\e84a'; } /* '' */
-.icn-inventary:before { content: '\e84b'; } /* '' */
-.icn-kardex:before { content: '\e84c'; } /* '' */
-.icn-key:before { content: '\e84d'; } /* '' */
-.icn-level-page:before { content: '\e84e'; } /* '' */
-.icn-like-o:before { content: '\e84f'; } /* '' */
-.icn-like:before { content: '\e850'; } /* '' */
-.icn-link:before { content: '\e851'; } /* '' */
-.icn-list:before { content: '\e852'; } /* '' */
-.icn-logistics:before { content: '\e854'; } /* '' */
-.icn-marca:before { content: '\e855'; } /* '' */
-.icn-media-plus:before { content: '\e856'; } /* '' */
-.icn-media-reload:before { content: '\e857'; } /* '' */
-.icn-media:before { content: '\e858'; } /* '' */
-.icn-megaphone:before { content: '\e859'; } /* '' */
-.icn-move:before { content: '\e85a'; } /* '' */
-.icn-movil:before { content: '\e85b'; } /* '' */
-.icn-music-note:before { content: '\e85c'; } /* '' */
-.icn-newspaper:before { content: '\e85d'; } /* '' */
+.icn-email:before { content: '\e841'; } /* '' */
+.icn-credential:before { content: '\e842'; } /* '' */
+.icn-eye-close:before { content: '\e843'; } /* '' */
+.icn-eye-open:before { content: '\e844'; } /* '' */
+.icn-family:before { content: '\e845'; } /* '' */
+.icn-finance:before { content: '\e846'; } /* '' */
+.icn-folder-up:before { content: '\e847'; } /* '' */
+.icn-folder:before { content: '\e848'; } /* '' */
+.icn-group:before { content: '\e849'; } /* '' */
+.icn-home:before { content: '\e84a'; } /* '' */
+.icn-industry:before { content: '\e84b'; } /* '' */
+.icn-intranet:before { content: '\e84c'; } /* '' */
+.icn-inventary:before { content: '\e84d'; } /* '' */
+.icn-kardex:before { content: '\e84e'; } /* '' */
+.icn-key:before { content: '\e84f'; } /* '' */
+.icn-level-page:before { content: '\e850'; } /* '' */
+.icn-like-o:before { content: '\e851'; } /* '' */
+.icn-like:before { content: '\e852'; } /* '' */
+.icn-link:before { content: '\e853'; } /* '' */
+.icn-list:before { content: '\e854'; } /* '' */
+.icn-logistics:before { content: '\e855'; } /* '' */
+.icn-marca:before { content: '\e856'; } /* '' */
+.icn-media:before { content: '\e857'; } /* '' */
+.icn-megaphone:before { content: '\e858'; } /* '' */
+.icn-media-plus:before { content: '\e859'; } /* '' */
+.icn-media-reload:before { content: '\e85a'; } /* '' */
+.icn-move:before { content: '\e85b'; } /* '' */
+.icn-movil:before { content: '\e85c'; } /* '' */
+.icn-music-note:before { content: '\e85d'; } /* '' */
+.icn-newspaper:before { content: '\e85e'; } /* '' */
 .icn-order-ok:before { content: '\e85f'; } /* '' */
 .icn-order:before { content: '\e860'; } /* '' */
 .icn-page:before { content: '\e861'; } /* '' */
-.icn-paid-credit:before { content: '\e862'; } /* '' */
-.icn-pdf:before { content: '\e863'; } /* '' */
-.icn-pencil:before { content: '\e864'; } /* '' */
-.icn-phone:before { content: '\e865'; } /* '' */
-.icn-photo:before { content: '\e866'; } /* '' */
-.icn-picture:before { content: '\e867'; } /* '' */
-.icn-play-circle:before { content: '\e868'; } /* '' */
-.icn-plus:before { content: '\e869'; } /* '' */
-.icn-point-1:before { content: '\e86a'; } /* '' */
-.icn-point-2:before { content: '\e86b'; } /* '' */
-.icn-point-3:before { content: '\e86c'; } /* '' */
-.icn-point-4:before { content: '\e86d'; } /* '' */
-.icn-point-map:before { content: '\e86e'; } /* '' */
-.icn-point-menu:before { content: '\e86f'; } /* '' */
-.icn-post:before { content: '\e870'; } /* '' */
-.icn-powerpoint:before { content: '\e871'; } /* '' */
-.icn-project-plan:before { content: '\e872'; } /* '' */
-.icn-proyect:before { content: '\e873'; } /* '' */
-.icn-rocket:before { content: '\e875'; } /* '' */
-.icn-rrhh:before { content: '\e876'; } /* '' */
-.icn-save:before { content: '\e877'; } /* '' */
-.icn-settings:before { content: '\e879'; } /* '' */
-.icn-shop:before { content: '\e87a'; } /* '' */
-.icn-shortcut:before { content: '\e87b'; } /* '' */
-.icn-skip:before { content: '\e87c'; } /* '' */
-.icn-slide:before { content: '\e87d'; } /* '' */
-.icn-sort-asc:before { content: '\e87e'; } /* '' */
-.icn-sort-desc:before { content: '\e87f'; } /* '' */
-.icn-sort:before { content: '\e880'; } /* '' */
-.icn-suitcase:before { content: '\e881'; } /* '' */
-.icn-sync:before { content: '\e882'; } /* '' */
-.icn-system:before { content: '\e883'; } /* '' */
-.icn-tabs-mobile:before { content: '\e884'; } /* '' */
-.icn-tabs:before { content: '\e885'; } /* '' */
-.icn-trash:before { content: '\e886'; } /* '' */
-.icn-truck-register:before { content: '\e887'; } /* '' */
-.icn-unchecked:before { content: '\e888'; } /* '' */
-.icn-upload:before { content: '\e889'; } /* '' */
-.icn-user-plus:before { content: '\e88a'; } /* '' */
-.icn-user:before { content: '\e88b'; } /* '' */
-.icn-users:before { content: '\e88c'; } /* '' */
-.icn-video-plus:before { content: '\e88d'; } /* '' */
-.icn-video-reload:before { content: '\e88e'; } /* '' */
-.icn-video:before { content: '\e88f'; } /* '' */
-.icn-warning:before { content: '\e890'; } /* '' */
-.icn-word:before { content: '\e891'; } /* '' */
-.icn-zone:before { content: '\e892'; } /* '' */
-.icn-lock:before { content: '\e894'; } /* '' */
-.icn-email:before { content: '\e895'; } /* '' */
-.icn-reorder:before { content: '\e896'; } /* '' */
-.icn-search:before { content: '\e897'; } /* '' */
-.icn-chevron-donw:before { content: '\e898'; } /* '' */
-.icn-chevron-left:before { content: '\e899'; } /* '' */
-.icn-chevron-right:before { content: '\e89a'; } /* '' */
-.icn-chevron-up:before { content: '\e89b'; } /* '' */
-.icn-boxs:before { content: '\e89c'; } /* '' */
-.icn-off:before { content: '\e89d'; } /* '' */
-.icn-credential:before { content: '\e89e'; } /* '' */
+.icn-off:before { content: '\e862'; } /* '' */
+.icn-paid-credit:before { content: '\e863'; } /* '' */
+.icn-pdf:before { content: '\e864'; } /* '' */
+.icn-pencil:before { content: '\e865'; } /* '' */
+.icn-phone:before { content: '\e866'; } /* '' */
+.icn-photo:before { content: '\e867'; } /* '' */
+.icn-picture:before { content: '\e868'; } /* '' */
+.icn-play-circle:before { content: '\e869'; } /* '' */
+.icn-plus:before { content: '\e86a'; } /* '' */
+.icn-point-1:before { content: '\e86b'; } /* '' */
+.icn-point-2:before { content: '\e86c'; } /* '' */
+.icn-point-3:before { content: '\e86d'; } /* '' */
+.icn-point-4:before { content: '\e86e'; } /* '' */
+.icn-point-map:before { content: '\e86f'; } /* '' */
+.icn-truck-register:before { content: '\e870'; } /* '' */
+.icn-point-menu:before { content: '\e871'; } /* '' */
+.icn-post:before { content: '\e872'; } /* '' */
+.icn-powerpoint:before { content: '\e873'; } /* '' */
+.icn-project-plan:before { content: '\e874'; } /* '' */
+.icn-proyect:before { content: '\e875'; } /* '' */
+.icn-rocket:before { content: '\e876'; } /* '' */
+.icn-rrhh:before { content: '\e877'; } /* '' */
+.icn-save:before { content: '\e878'; } /* '' */
+.icn-search:before { content: '\e879'; } /* '' */
+.icn-settings:before { content: '\e87a'; } /* '' */
+.icn-shop:before { content: '\e87b'; } /* '' */
+.icn-shortcut:before { content: '\e87c'; } /* '' */
+.icn-skip:before { content: '\e87d'; } /* '' */
+.icn-slide:before { content: '\e87e'; } /* '' */
+.icn-sort-asc:before { content: '\e87f'; } /* '' */
+.icn-sort-desc:before { content: '\e880'; } /* '' */
+.icn-sort:before { content: '\e881'; } /* '' */
+.icn-suitcase:before { content: '\e882'; } /* '' */
+.icn-reorder:before { content: '\e883'; } /* '' */
+.icn-upload:before { content: '\e884'; } /* '' */
+.icn-unchecked:before { content: '\e885'; } /* '' */
+.icn-user-plus:before { content: '\e886'; } /* '' */
+.icn-user:before { content: '\e887'; } /* '' */
+.icn-users:before { content: '\e888'; } /* '' */
+.icn-video-plus:before { content: '\e889'; } /* '' */
+.icn-video-reload:before { content: '\e88a'; } /* '' */
+.icn-video:before { content: '\e88b'; } /* '' */
+.icn-warning:before { content: '\e88c'; } /* '' */
+.icn-word:before { content: '\e88d'; } /* '' */
+.icn-zone:before { content: '\e88e'; } /* '' */
+.icn-sync:before { content: '\e88f'; } /* '' */
+.icn-system:before { content: '\e890'; } /* '' */
+.icn-tabs-mobile:before { content: '\e891'; } /* '' */
+.icn-tabs:before { content: '\e892'; } /* '' */
+.icn-trash:before { content: '\e893'; } /* '' */
+.icn-zoom:before { content: '\e896'; } /* '' */
