--- a/css/icon-font-codes.css
+++ b/css/icon-font-codes.css
@@ -22,7 +22,7 @@
 .icn-box:before { content: '\e814'; } /* '' */
 .icn-btn-off:before { content: '\e815'; } /* '' */
 .icn-btn-on:before { content: '\e816'; } /* '' */
-.icn-bubble:before { content: '\e817'; } /* '' */
+.icn-checkmark-circle:before { content: '\e817'; } /* '' */
 .icn-calendar-clock:before { content: '\e818'; } /* '' */
 .icn-calendar-day:before { content: '\e819'; } /* '' */
 .icn-calendar-ok:before { content: '\e81a'; } /* '' */
@@ -33,14 +33,16 @@
 .icn-catalog:before { content: '\e81f'; } /* '' */
 .icn-category-o:before { content: '\e820'; } /* '' */
 .icn-category-v:before { content: '\e821'; } /* '' */
+.icn-inbox:before { content: '\e822'; } /* '' */
+.icn-comment:before { content: '\e823'; } /* '' */
 .icn-cc:before { content: '\e824'; } /* '' */
 .icn-checked:before { content: '\e825'; } /* '' */
-.icn-checkmark-circle:before { content: '\e826'; } /* '' */
 .icn-clients:before { content: '\e827'; } /* '' */
 .icn-clock:before { content: '\e828'; } /* '' */
 .icn-close:before { content: '\e829'; } /* '' */
+.icn-stadistics:before { content: '\e82a'; } /* '' */
 .icn-columnist:before { content: '\e82b'; } /* '' */
-.icn-comment:before { content: '\e82c'; } /* '' */
+.icn-bubble:before { content: '\e82c'; } /* '' */
 .icn-conector:before { content: '\e82d'; } /* '' */
 .icn-contact:before { content: '\e82f'; } /* '' */
 .icn-content-block:before { content: '\e830'; } /* '' */
@@ -132,8 +134,12 @@
 .icn-lock:before { content: '\e896'; } /* '' */
 .icn-off-1:before { content: '\e897'; } /* '' */
 .icn-reorder:before { content: '\e898'; } /* '' */
+.icn-bubble-w:before { content: '\e899'; } /* '' */
 .icn-credential:before { content: '\e89a'; } /* '' */
+.icn-bubble-i:before { content: '\e89b'; } /* '' */
 .icn-conf:before { content: '\e89c'; } /* '' */
+.icn-close-circle:before { content: '\e89d'; } /* '' */
+.icn-minus-circle:before { content: '\e89e'; } /* '' */
 .icn-user:before { content: '\e89f'; } /* '' */
 .icn-users:before { content: '\e8a0'; } /* '' */
 .icn-chevron-donw:before { content: '\e8a1'; } /* '' */
