--- a/css/icon-font-codes.css
+++ b/css/icon-font-codes.css
@@ -37,6 +37,7 @@
 .icn-comment:before { content: '\e823'; } /* '' */
 .icn-cc:before { content: '\e824'; } /* '' */
 .icn-checked:before { content: '\e825'; } /* '' */
+.icn-channels:before { content: '\e826'; } /* '' */
 .icn-clients:before { content: '\e827'; } /* '' */
 .icn-clock:before { content: '\e828'; } /* '' */
 .icn-close:before { content: '\e829'; } /* '' */
