--- a/css/icon-font-codes.css
+++ b/css/icon-font-codes.css
@@ -52,16 +52,20 @@
 .icn-cover:before { content: '\e832'; } /* '' */
 .icn-credential-o:before { content: '\e833'; } /* '' */
 .icn-classification:before { content: '\e834'; } /* '' */
+.icn-target:before { content: '\e835'; } /* '' */
 .icn-crop:before { content: '\e836'; } /* '' */
 .icn-danger:before { content: '\e837'; } /* '' */
 .icn-deposit:before { content: '\e838'; } /* '' */
 .icn-diagram-fluid:before { content: '\e839'; } /* '' */
 .icn-diagram-operation:before { content: '\e83a'; } /* '' */
 .icn-discharge:before { content: '\e83b'; } /* '' */
+.icn-play:before { content: '\e83c'; } /* '' */
 .icn-division:before { content: '\e83d'; } /* '' */
 .icn-donwload:before { content: '\e83e'; } /* '' */
 .icn-excel:before { content: '\e83f'; } /* '' */
 .icn-expand:before { content: '\e840'; } /* '' */
+.icn-plus-circle:before { content: '\e841'; } /* '' */
+.icn-bank:before { content: '\e842'; } /* '' */
 .icn-eye-close:before { content: '\e843'; } /* '' */
 .icn-eye-open:before { content: '\e844'; } /* '' */
 .icn-family:before { content: '\e845'; } /* '' */
