--- a/css/icon-font.css
+++ b/css/icon-font.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'icon-font';
-  src: url('../font/icon-font.eot?97997868');
-  src: url('../font/icon-font.eot?97997868#iefix') format('embedded-opentype'),
-       url('../font/icon-font.woff2?97997868') format('woff2'),
-       url('../font/icon-font.woff?97997868') format('woff'),
-       url('../font/icon-font.ttf?97997868') format('truetype'),
-       url('../font/icon-font.svg?97997868#icon-font') format('svg');
+  src: url('../font/icon-font.eot?44691305');
+  src: url('../font/icon-font.eot?44691305#iefix') format('embedded-opentype'),
+       url('../font/icon-font.woff2?44691305') format('woff2'),
+       url('../font/icon-font.woff?44691305') format('woff'),
+       url('../font/icon-font.ttf?44691305') format('truetype'),
+       url('../font/icon-font.svg?44691305#icon-font') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'icon-font';
-    src: url('../font/icon-font.svg?97997868#icon-font') format('svg');
+    src: url('../font/icon-font.svg?44691305#icon-font') format('svg');
   }
 }
 */
@@ -108,16 +108,20 @@
 .icn-cover:before { content: '\e832'; } /* '' */
 .icn-credential-o:before { content: '\e833'; } /* '' */
 .icn-classification:before { content: '\e834'; } /* '' */
+.icn-target:before { content: '\e835'; } /* '' */
 .icn-crop:before { content: '\e836'; } /* '' */
 .icn-danger:before { content: '\e837'; } /* '' */
 .icn-deposit:before { content: '\e838'; } /* '' */
 .icn-diagram-fluid:before { content: '\e839'; } /* '' */
 .icn-diagram-operation:before { content: '\e83a'; } /* '' */
 .icn-discharge:before { content: '\e83b'; } /* '' */
+.icn-play:before { content: '\e83c'; } /* '' */
 .icn-division:before { content: '\e83d'; } /* '' */
 .icn-donwload:before { content: '\e83e'; } /* '' */
 .icn-excel:before { content: '\e83f'; } /* '' */
 .icn-expand:before { content: '\e840'; } /* '' */
+.icn-plus-circle:before { content: '\e841'; } /* '' */
+.icn-bank:before { content: '\e842'; } /* '' */
 .icn-eye-close:before { content: '\e843'; } /* '' */
 .icn-eye-open:before { content: '\e844'; } /* '' */
 .icn-family:before { content: '\e845'; } /* '' */
