--- a/css/icon-font-codes.css
+++ b/css/icon-font-codes.css
@@ -69,6 +69,7 @@
 .icn-eye-close:before { content: '\e843'; } /* '' */
 .icn-eye-open:before { content: '\e844'; } /* '' */
 .icn-family:before { content: '\e845'; } /* '' */
+.icn-e-learning:before { content: '\e846'; } /* '' */
 .icn-folder-up:before { content: '\e847'; } /* '' */
 .icn-folder:before { content: '\e848'; } /* '' */
 .icn-group:before { content: '\e849'; } /* '' */
